pkg/front_end/testcases/nnbd/definite_assignment_and_completion.dart.strong.expect
library /*isNonNullableByDefault*/;
//
// Problems in library:
//
// pkg/front_end/testcases/nnbd/definite_assignment_and_completion.dart:10:10: Error: Non-nullable variable 'x' must be assigned before it can be used.
//   return x;
//          ^
//
import self as self;
import "dart:core" as core;

static method foo() → core::int {
  core::int x;
  return (let final<BottomType> #t1 = invalid-expression "pkg/front_end/testcases/nnbd/definite_assignment_and_completion.dart:10:10: Error: Non-nullable variable 'x' must be assigned before it can be used.
  return x;
         ^" in x) as{TypeError,ForNonNullableByDefault} core::int;
}
static method bar() → core::int {}
static method main() → dynamic {}
